--- a/src/main/resources/templates/layouts/layout_main.html
+++ b/src/main/resources/templates/layouts/layout_main.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>main</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>여기는 main</h1>
+
 </body>
 </html>
