--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -5,7 +5,7 @@
     <title>여기는 myPage.html</title>
 </head>
 <body>
-<p th:text="${userInfo}"></p>
+<p th:text="${user}"></p>
 <h1>여기는 마이페이지</h1>
 </body>
 </html>
